fix: fixed bug about alignment on tablet

--- a/src/components/organisms/Footer/Footer.scss
+++ b/src/components/organisms/Footer/Footer.scss
@@ -22,7 +22,7 @@
     align-items: center;
     width: 100%;
     height: 96px;
-    padding: 32px 152px;
+    padding: 32px 10%;
   }
 
   &__logo {
